--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div id="header">
       <div class="container">
         <nav>
-          <img src="images/logo3.jpg" class="logo" />
+          <img src="images/logo4.jpg" class="logo" />
           <ul id="sidemenu">
             <li><a href="#header">Home</a></li>
             <li><a href="#about">About</a></li>
@@ -45,10 +45,10 @@
             <h1 class="sub-title">About Me</h1>
             <p>
               A confident, outspoken, well-experienced, hardworking and business
-              minded second year Bsc .Computer Science student at the Kwame
-              Nkrumah University of Science and Technology seeking internship in
-              your prestigious organization to utilize and build upon my
-              exclusive skills for societal and personal benefits.
+              minded final year B.c Computer Science student at Kwame
+              Nkrumah University of Science and Technology. I am passionate
+              about exploring the reamls of coding, machine learing and building
+              robust applications.
             </p>
 
             <div class="tab-titles">
@@ -131,7 +131,7 @@
           <img src="images/work-1.jpg" >
           <div class="layer">
             <h3>Music Recommender</h3>
-            <p>This is a machine learning project that to predict the type of song given the gender and the age of the user</p>
+            <p>This is a machine learning project that predict the type of song given the gender and the age of the user</p>
             <a href="https://github.com/AaronOtu/Music-reommender"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
           </div>
         </div><div class="work">
