link & few responsiveness fixed

--- a/index.html
+++ b/index.html
@@ -132,14 +132,14 @@
           <div class="layer">
             <h3>Music Recommender</h3>
             <p>This is a machine learning project that predict the type of song given the gender and the age of the user</p>
-            <a href="https://github.com/AaronOtu/Music-reommender"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <a href="https://github.com/aaronotu/Music-reommender"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
           </div>
         </div><div class="work">
           <img src="images/work-2.jpg" >
           <div class="layer">
             <h3>Customer Relations Management</h3>
             <p>This project is about customer interactions, keeping records of a customer and the data can be manipulated </p>
-            <a href="https://github.com/AaronOtu/DjangoCRM"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <a href="https://github.com/aaronotu/DjangoCRM"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
           </div>
         </div>
         <div class="work">
@@ -148,7 +148,7 @@
             <h3>Snake Game</h3>
             <div><p>Interative game, In which user controls snake to eat up food, growing in length and avoiding collision</p></div>
             
-            <a href="https://github.com/AaronOtu/SnakeGame"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+            <a href="https://github.com/aaronotu/SnakeGame"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
           </div>
         </div>
       </div>
